<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">大拿俱乐部</string>
    <string name="login">登陆</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="back_again_and_exit_app">再按一次退出</string>
    <string name="info_title1">俱乐部介绍</string>
    <string name="info_title2">法律声明</string>
    <string name="info_title3">免责声明</string>
    <string name="more_title0">个人空间</string>
    <string name="more_title1">我的作品</string>
    <string name="more_title2">俱乐部声明</string>
    <string name="more_title3">收藏夹</string>
    <string name="more_title4">退出</string>
    <string name="profile_base">基本信息</string>
    <string name="profile_contact">联系方式</string>
    <string name="profile_works">作品欣赏</string>
    <string name="category_all">All</string>
    <string name="category_digital">数字</string>
    <string name="category_science">科技</string>
    <string name="tab1">新闻</string>
    <string name="tab2">活动</string>
    <string name="tab3">通讯录</string>
    <string name="tab4">消息</string>
    <string name="tab5">更多</string>
    <string name="action_settings">Settings</string>
    <string name="setting_login_hint">你还没有登录\n赶快登录吧</string>
    <string name="setting_logout">退出</string>
    <string name="setting_logout_success">退出成功</string>
    <string name="feedback_welcome_msg">欢迎您留下宝贵的意见，我们将在第一时间做出响应！</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_commit_success">提交成功</string>
    <string name="simple_network_bad_hint">网络不通畅\n稍后再试</string>
    <string name="search_result_count_info">（%s条结果）</string>
    <string name="max_content_length_hint">不能超过个%d个字</string>
    <string name="no_sdcard">SDCard不存在</string>
    <string name="simple_net_bad_toast">网络不通畅，稍后再试</string>
    <string name="loging">登陆中&#8230;</string>
    <string name="login_failed">登录失败</string>
    <string name="comitting">加载中&#8230;</string>
    <string name="weibo_loading_failed">加载失败</string>
    <string name="take_pciture">拍照</string>
    <string name="select_img_from_photo_album">从相册中选择</string>
    <string name="select_img_failed">选择图片失败</string>
    <string name="sdcard_is_unmount">SdCard不存在</string>
    <string name="cancle">取消</string>

</resources>