<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <LinearLayout
        android:id="@+id/LinearLayoutSegment"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonIndex1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/segment_selected"
            android:gravity="center"
            android:text="@string/category_all"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" >
        </Button>

        <Button
            android:id="@+id/buttonIndex2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/segment_normal"
            android:gravity="center"
            android:text="@string/category_digital"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" >
        </Button>

        <Button
            android:id="@+id/buttonIndex3"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/segment_normal"
            android:gravity="center"
            android:text="@string/category_science"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" >
        </Button>
    </LinearLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/pull_refresh_listview"
        style="@style/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/LinearLayoutSegment" />

</RelativeLayout>