<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.commov.app.dv"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/transparent" >

        <ViewFlipper
            android:id="@+id/photos"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:persistentDrawingCache="animation" >
        </ViewFlipper>

        <LinearLayout
            android:id="@+id/ll_loginsection"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/bg"
            android:orientation="vertical"
            android:visibility="invisible" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:layout_weight="0.16"
                android:src="@drawable/icon_intro" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.35"
                android:background="@color/transparent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/login_input_bg"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/et_username"
                        style="@style/search_key"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/user_name"
                        android:maxLength="100"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/et_password"
                        style="@style/search_key"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLength="100"
                        android:singleLine="true" />
                </LinearLayout>

                <Button
                    android:id="@+id/buttonLoginAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/login_button"
                    android:text="@string/login"
                    android:textColor="@color/darkgrey"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.38" />
        </LinearLayout>
    </FrameLayout>

    <ViewFlipper
        android:id="@+id/titles"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:persistentDrawingCache="animation" >
    </ViewFlipper>

    <com.commov.app.dv.widget.CirclePageIndicator
        android:id="@+id/viewflowindic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:padding="10dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/login"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/buttonInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:layout_toRightOf="@id/buttonLogin"
        android:background="@null"
        android:src="@drawable/info" />

</RelativeLayout>